# rpi-ble

./: .gitignore  README.md  pyproject.toml  rpi-ble_0.1.0_all.deb  win_ble_netcfg_cli.py
__build/: rpi-ble_0.1.0.dsc  rpi-ble_0.1.0.tar.xz  rpi-ble_0.1.0_all.deb  rpi-ble_0.1.0_arm64.buildinfo  rpi-ble_0.1.0_arm64.changes
debian/: changelog  control  files  install  postinst  prerm
rpi_ble_app/: README.md  pubspec.yaml
rpi_ble_app/android/app/: build.gradle
rpi_ble_app/android/app/src/main/: AndroidManifest.xml
rpi_ble_app/ios/Runner/: Info.plist
rpi_ble_app/ios/Runner.xcodeproj/: project.pbxproj
rpi_ble_app/lib/: main.dart
rpi_ble_app/lib/ble/: ble_netcfg.dart
rpi_ble_app/lib/pages/: actions_page.dart  devices_page.dart  info_page.dart  lan_page.dart  wifi_page.dart
rpi_ble_app/lib/state/: app_state.dart
rpi_ble_app/lib/utils/: net_validators.dart  permissions.dart
rpi_ble_app/lib/widgets/: kv.dart
rpi_ble_app/linux/: CMakeLists.txt
rpi_ble_app/linux/runner/: my_application.cc
rpi_ble_app/macos/Runner.xcodeproj/: project.pbxproj
rpi_ble_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
rpi_ble_app/macos/Runner/Configs/: AppInfo.xcconfig
rpi_ble_app/web/: index.html  manifest.json
rpi_ble_app/windows/: CMakeLists.txt
rpi_ble_app/windows/runner/: Runner.rc  main.cpp
srv/: README.md  ble-autoagent.py  ble-autoagent.service  rpi_ble_netcfg.py
srv/rpi_ble/: __init__.py  netcfg.py
srv/rpi_ble/systemd/: ble-autoagent.service  rpi-ble-netcfg.service
(+1 files in other folders)
