[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-ble"
version = "0.1.0"
description = "Raspberry Pi BLE server that exposes network configuration characteristics"
readme = "README.md"
authors = [
  {name = "Vsevolod Chechun"}
]
requires-python = ">=3.9"
dependencies = [
  "bluezero>=0.9",
  "dbus-python",
  "PyGObject"
]

[project.scripts]
rpi-ble-netcfg = "rpi_ble.netcfg:main"
rpi-ble-autoagent = "rpi_ble.autoagent:main"

[tool.setuptools]
package-dir = {"" = "srv"}

[tool.setuptools.packages.find]
where = ["srv"]

[tool.setuptools.package-data]
"rpi_ble" = ["systemd/*.service"]
